Updated sample to 0.4.0 version and JavaFX 11